# Db_Migration_cli

./: .gitignore  README.md  db_dummy_test_sqlite  main.py  pyproject.toml
db/: db_dummy_test_sqlite  sqlCon.py
db/mongo/: mongoCon.py  mongoMigrate.py
