[tool.poetry]
name = "migration-cli"
version = "0.1.0"
description = ""
authors = ["khaledmajdoub1 <khaled.majdoub@esprit.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
click = "^8.1.7"
pymongo = "^4.6.1"
tabulate = "^0.9.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
